<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TempSensingMain" >
    
    <TextView
        android:id="@+id/tempF1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="3dp"
        android:text="@string/TempReadingF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tempP1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tempF1"
        android:layout_below="@id/tempF1"
        android:layout_marginTop="3dp"
        android:text="@string/TempReadingP"
        android:textSize="30sp" />

    <Button
        android:id="@+id/Button01Minus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tempP1"
        android:layout_below="@id/tempP1"
        android:layout_marginTop="3dp"
        android:text="@string/MinusSign" />
    
    <Button
        android:id="@+id/Button01Plus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/Button01Minus"
        android:layout_toRightOf="@id/Button01Minus"
        android:layout_marginTop = "3dp"
        android:text="@string/PlusSign" />
  
	<TextView
        android:id="@+id/ValueMulti01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/Button01Plus" 
        android:layout_toRightOf="@id/Button01Plus"
        android:layout_marginTop = "3dp"
        android:text="@string/ValueMulti01"
        android:textSize="30sp" />    

    <TextView
        android:id="@+id/tempF2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tempF1"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="130dp"
        android:text="@string/TempReadingF"
        android:textSize="30sp" />
    
    <TextView
        android:id="@+id/tempP2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tempF2"
        android:layout_below="@id/tempF2"
        android:layout_marginTop="3dp"
        android:text="@string/TempReadingP"
        android:textSize="30sp" />

    <Button
        android:id="@+id/Button02Minus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tempP2"
        android:layout_alignLeft="@id/tempF2"
        android:layout_marginTop="3dp"
        android:text="@string/MinusSign" />

    <Button
        android:id="@+id/Button02Plus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/Button02Minus"
        android:layout_toRightOf="@id/Button02Minus"
        android:layout_marginTop="3dp"
        android:text="@string/PlusSign" />
    
    <TextView
        android:id="@+id/ValueMulti02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/Button02Minus"
        android:layout_toRightOf="@id/Button02Plus"
        android:layout_marginTop="3dp"
        android:text="@string/ValueMulti02"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tempF3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_below="@id/Button02Minus"
        android:layout_marginTop="10dp"
        android:text="@string/TempReadingF"
        android:textSize="30sp" />
    
    <TextView
        android:id="@+id/tempP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tempF3"
        android:layout_below="@id/tempF3"
        android:layout_marginTop="3dp"
        android:text="@string/TempReadingP"
        android:textSize="30sp" />

    <Button
        android:id="@+id/Button03Minus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tempP3"
        android:layout_below="@id/tempF3"
        android:layout_alignBaseline="@id/tempP3"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:text="@string/MinusSign" />

    <Button
        android:id="@+id/Button03Plus"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/Button03Minus"
        android:layout_toRightOf="@id/Button03Minus"
        android:layout_marginTop="5dp"
        android:text="@string/PlusSign" />
    
    <TextView
        android:id="@+id/ValueMulti03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/Button03Plus"
        android:layout_toRightOf="@id/Button03Plus"
        android:layout_marginTop="5dp"
        android:text="@string/ValueMulti03"
        android:textSize="30sp" />

</RelativeLayout>